--- a/.project
+++ b/.project
@@ -2,7 +2,7 @@
 <projectDescription>
 	<name>guest_book</name>
 	<comment></comment>
-	<projects>
+	<projects>aa
 	</projects>
 	<buildSpec>
 		<buildCommand>
